--- a/Hyakuninisshu/Base.lproj/Main.storyboard
+++ b/Hyakuninisshu/Base.lproj/Main.storyboard
@@ -339,7 +339,7 @@
                                         <rect key="frame" x="16" y="177" width="169" height="30"/>
                                         <state key="normal" title="過去の結果をすべて見る"/>
                                         <connections>
-                                            <segue destination="CUn-zO-SzP" kind="show" id="WQP-ig-As2"/>
+                                            <segue destination="CUn-zO-SzP" kind="show" identifier="ShowExamHistory" id="WQP-ig-As2"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -913,13 +913,55 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="3fa-dC-wVX">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ExamHistoryTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExamHistoryTableViewCell" id="3fa-dC-wVX" customClass="ExamHistoryTableViewCell" customModule="Hyakuninisshu" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="57"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3fa-dC-wVX" id="PKI-y7-Ohp">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="57"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021/10/21 11:22:33" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6eI-hY-Jgb" userLabel="DateLabel">
+                                            <rect key="frame" x="8" y="8" width="398" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16" id="qjw-W1-aSY"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正解数: 100 / 100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e5Z-BN-3E6" userLabel="ScoreLabel">
+                                            <rect key="frame" x="8" y="28" width="199" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="平均回答時間: 3.6秒" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dql-Re-fuk" userLabel="AverageAnswerTimeLabel">
+                                            <rect key="frame" x="215" y="28" width="191" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="Dql-Re-fuk" secondAttribute="bottom" constant="8" id="1it-Cv-QF3"/>
+                                        <constraint firstAttribute="bottom" secondItem="e5Z-BN-3E6" secondAttribute="bottom" constant="8" id="1zN-ZB-dr0"/>
+                                        <constraint firstItem="Dql-Re-fuk" firstAttribute="top" secondItem="6eI-hY-Jgb" secondAttribute="bottom" constant="4" id="40J-yd-4CK"/>
+                                        <constraint firstItem="6eI-hY-Jgb" firstAttribute="top" secondItem="PKI-y7-Ohp" secondAttribute="top" constant="8" id="KSf-sf-JCG"/>
+                                        <constraint firstItem="Dql-Re-fuk" firstAttribute="leading" secondItem="e5Z-BN-3E6" secondAttribute="trailing" constant="8" id="PlY-9e-Kob"/>
+                                        <constraint firstAttribute="trailing" secondItem="Dql-Re-fuk" secondAttribute="trailing" constant="8" id="Ufu-VT-IRv"/>
+                                        <constraint firstItem="e5Z-BN-3E6" firstAttribute="top" secondItem="6eI-hY-Jgb" secondAttribute="bottom" constant="4" id="ZMr-0r-oeC"/>
+                                        <constraint firstItem="Dql-Re-fuk" firstAttribute="width" secondItem="PKI-y7-Ohp" secondAttribute="width" multiplier="0.5" constant="-16" id="aK5-w8-te1"/>
+                                        <constraint firstItem="e5Z-BN-3E6" firstAttribute="width" relation="lessThanOrEqual" secondItem="PKI-y7-Ohp" secondAttribute="width" multiplier="0.5" constant="-8" id="cVL-1Y-act"/>
+                                        <constraint firstItem="6eI-hY-Jgb" firstAttribute="leading" secondItem="PKI-y7-Ohp" secondAttribute="leading" constant="8" id="dIw-3S-1Oz"/>
+                                        <constraint firstItem="e5Z-BN-3E6" firstAttribute="leading" secondItem="PKI-y7-Ohp" secondAttribute="leading" constant="8" id="lFq-Iz-7YO"/>
+                                        <constraint firstAttribute="trailing" secondItem="6eI-hY-Jgb" secondAttribute="trailing" constant="8" id="voV-03-1o1"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="averageAnswerTimeLabel" destination="Dql-Re-fuk" id="RTK-hW-YYe"/>
+                                    <outlet property="dateLabel" destination="6eI-hY-Jgb" id="5or-Z6-ff5"/>
+                                    <outlet property="scoreLabel" destination="e5Z-BN-3E6" id="LtY-vE-7c8"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -931,7 +973,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qye-uY-ID6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6761" y="1235"/>
+            <point key="canvasLocation" x="6760.8695652173919" y="1234.8214285714284"/>
         </scene>
         <!--練習結果-->
         <scene sceneID="rBg-NQ-zEN">
@@ -1048,7 +1090,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KhX-fE-c6R" userLabel="YomiFuda Area">
                                 <rect key="frame" x="0.0" y="44" width="414" height="409"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mpO-Zn-wxx" customClass="YomiFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mpO-Zn-wxx" customClass="YomiFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
                                         <rect key="frame" x="139" y="90.5" width="136" height="228"/>
                                     </view>
                                 </subviews>
@@ -1064,7 +1106,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="x91-1V-jq8">
                                         <rect key="frame" x="16" y="16" width="382" height="377"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35q-Zy-B9S" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="35q-Zy-B9S" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="92.5" width="64" height="192"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <gestureRecognizers/>
@@ -1072,7 +1114,7 @@
                                                     <outletCollection property="gestureRecognizers" destination="6Oc-mJ-fbs" appends="YES" id="gdR-jA-YSh"/>
                                                 </connections>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zuf-OP-kDh" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zuf-OP-kDh" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
                                                 <rect key="frame" x="106" y="92.5" width="64" height="192"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <gestureRecognizers/>
@@ -1080,7 +1122,7 @@
                                                     <outletCollection property="gestureRecognizers" destination="FHz-7C-gAx" appends="YES" id="nRi-rj-a39"/>
                                                 </connections>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XKB-NW-52C" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XKB-NW-52C" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
                                                 <rect key="frame" x="212" y="92.5" width="64" height="192"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <gestureRecognizers/>
@@ -1088,7 +1130,7 @@
                                                     <outletCollection property="gestureRecognizers" destination="GKk-ep-9Ye" appends="YES" id="pP4-U9-EDa"/>
                                                 </connections>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Myh-Xe-0AE" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Myh-Xe-0AE" customClass="ToriFudaView" customModule="Hyakuninisshu" customModuleProvider="target">
                                                 <rect key="frame" x="318" y="92.5" width="64" height="192"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <gestureRecognizers/>
